--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,31 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="cadastro-content" fullscreen>
+  <div class="cadastro-box">
+    <h1>Cadastro</h1>
+    <hr style="background-color: black;">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <form>
+      <ion-item lines="none">
+        <ion-icon name="person" slot="start"></ion-icon>
+        <ion-input placeholder="Escolha um usuário"></ion-input>
+      </ion-item>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+      <ion-item lines="none">
+        <ion-icon name="at" slot="start"></ion-icon>
+        <ion-input type="email" placeholder="Escolha um e-mail"></ion-input>
+      </ion-item>
+
+      <ion-item lines="none">
+        <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
+        <ion-input type="password" placeholder="Escolha uma senha" ></ion-input>
+      </ion-item>
+
+      <ion-button expand="block" fill="clear" class="btn-cadastrar">
+        Cadastrar
+      </ion-button>
+    </form>
+
+    <p class="login-text">
+      Já possui conta? <a routerLink="/login">Faça login.</a>
+    </p>
   </div>
 </ion-content>
