--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,76 @@
-#container {
-  text-align: center;
+.cadastro-content {
+  --background: #2f324e;
+  position: relative; 
+  height: 100%;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  .linha-cadastro {
+    border: 0;
+    border-top: 1px solid #2b2b2b; /* Cor da linha */
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+ 
+  .cadastro-box {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #fff;
+    padding: 20px;
+    border-radius: 30px 30px 0 0;
+    box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.26);
+    text-align: center;
+    height: 80vh; 
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+    h1 {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+      color: #000;
+      font-weight: 800;
+    }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+    ion-item {
+      margin-bottom: 35px;
+      --border-color: transparent;
+      --background: transparent;
 
-  color: #8c8c8c;
+      ion-icon {
+        font-size: 20px;
+        color: #000;
+      }
 
-  margin: 0;
-}
+    }
 
-#container a {
-  text-decoration: none;
+    ion-input {
+      font-size: 14px;
+      color: #000;
+      --border-color: #ccc;
+      border-bottom: 2px solid var(--border-color);
+      padding-bottom: 5px;
+    }
+
+    .btn-cadastrar {
+      margin-bottom: 25px;
+      background: #CE5EED;
+      border-radius: 25px;
+      color: #fff;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      text-transform: none; /*Tira a caixa alta do texto*/
+    }
+
+    .login-text {
+      margin-top: 15px;
+      font-size: 14px;
+      color: #000;
+
+      a {
+        font-weight: bold;
+        color: #c471f5;
+        text-decoration: none;
+      }
+    }
+  }
 }
